// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContractCallOptions.vue > Should initialize with default account if set in workspace store 1`] = `
"<div data-v-b120a160="">
  <!--v-if-->
  <div data-v-b120a160="" class="mb-5"> Call Contract With: <a data-v-b120a160="" class="">Loaded Accounts</a> | <a data-v-b120a160="" class="underlined">Metamask</a></div>
  <div data-v-b120a160="" class="v-row">
    <div data-v-b120a160="" class="v-col v-col-5">
      <div data-v-b120a160="" class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected v-select--selection-slot">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-2">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-0">
                <!---->Select from address
              </label>
              <!---->
              <div class="v-field__input" data-no-activator="">
                <!---->
                <!---->
                <div class="v-select__selection">
                  <!--v-if--> 0x123
                </div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="0x123">
              </div>
              <!---->
            </div>
            <!---->
            <div class="v-field__append-inner">
              <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
              <!---->
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                  <!---->Select from address
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div id="input-0-messages" class="v-input__details" role="alert" aria-live="polite">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
      <div data-v-b120a160="" class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-3">
                <!---->Gas Price (wei)
              </label>
              <!----><input size="1" type="number" id="input-3" aria-describedby="input-3-messages" class="v-field__input" value="1000">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-3">
                  <!---->Gas Price (wei)
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div id="input-3-messages" class="v-input__details" role="alert" aria-live="polite">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
      <div data-v-b120a160="" class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-5">
                <!---->Maximum Gas
              </label>
              <!----><input size="1" type="number" id="input-5" aria-describedby="input-5-messages" class="v-field__input" value="100000">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-5">
                  <!---->Maximum Gas
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`ContractCallOptions.vue > Should not show info alert when not admin 1`] = `
"<div data-v-b120a160="">
  <!--v-if-->
  <!--v-if-->
  <wallet-connector-mirror-stub data-v-b120a160="" prependicon="mdi-wallet" size="small" variant="outlined"></wallet-connector-mirror-stub>
</div>"
`;

exports[`ContractCallOptions.vue > Should show accounts mode with account list when accounts provided 1`] = `
"<div data-v-b120a160="">
  <!--v-if-->
  <div data-v-b120a160="" class="mb-5"> Call Contract With: <a data-v-b120a160="" class="">Loaded Accounts</a> | <a data-v-b120a160="" class="underlined">Metamask</a></div>
  <div data-v-b120a160="" class="v-row">
    <div data-v-b120a160="" class="v-col v-col-5">
      <div data-v-b120a160="" class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected v-select--selection-slot">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-2">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-0">
                <!---->Select from address
              </label>
              <!---->
              <div class="v-field__input" data-no-activator="">
                <!---->
                <!---->
                <div class="v-select__selection">
                  <!--v-if--> 0x123
                </div><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" inputmode="none" aria-label="Open" title="Open" value="0x123">
              </div>
              <!---->
            </div>
            <!---->
            <div class="v-field__append-inner">
              <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
              <!---->
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                  <!---->Select from address
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div id="input-0-messages" class="v-input__details" role="alert" aria-live="polite">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
      <div data-v-b120a160="" class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-3">
                <!---->Gas Price (wei)
              </label>
              <!----><input size="1" type="number" id="input-3" aria-describedby="input-3-messages" class="v-field__input" value="1000">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-3">
                  <!---->Gas Price (wei)
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div id="input-3-messages" class="v-input__details" role="alert" aria-live="polite">
          <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
      <div data-v-b120a160="" class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-outlined v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!----><label class="v-label v-field-label" for="input-5">
                <!---->Maximum Gas
              </label>
              <!----><input size="1" type="number" id="input-5" aria-describedby="input-5-messages" class="v-field__input" value="100000">
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-5">
                  <!---->Maximum Gas
                </label></div>
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`ContractCallOptions.vue > Should show connected address when in metamask mode and address is connected 1`] = `
"<div data-v-b120a160="">
  <div data-v-b120a160="" class="v-alert v-theme--light bg-info v-alert--density-compact v-alert--variant-flat mb-3" role="alert">
    <!----><span class="v-alert__underlay"></span>
    <!---->
    <div class="v-alert__prepend"><i class="mdi-information mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
    <div class="v-alert__content">
      <!----> To call contracts with loaded accounts, go to the "Accounts" tab and sync them from your chain, or add them using a private key or the impersonification feature.
    </div>
    <!---->
    <!---->
  </div>
  <!--v-if--><b data-v-b120a160="">Connected account:</b>
  <hash-link-stub data-v-b120a160="" type="address" hash="0x789" fullhash="true" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
</div>"
`;

exports[`ContractCallOptions.vue > Should show info alert when no accounts and is admin 1`] = `
"<div data-v-b120a160="">
  <div data-v-b120a160="" class="v-alert v-theme--light bg-info v-alert--density-compact v-alert--variant-flat mb-3" role="alert">
    <!----><span class="v-alert__underlay"></span>
    <!---->
    <div class="v-alert__prepend"><i class="mdi-information mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
    <div class="v-alert__content">
      <!----> To call contracts with loaded accounts, go to the "Accounts" tab and sync them from your chain, or add them using a private key or the impersonification feature.
    </div>
    <!---->
    <!---->
  </div>
  <!--v-if-->
  <wallet-connector-mirror-stub data-v-b120a160="" prependicon="mdi-wallet" size="small" variant="outlined"></wallet-connector-mirror-stub>
</div>"
`;

exports[`ContractCallOptions.vue > Should show metamask by default when no accounts 1`] = `
"<div data-v-b120a160="">
  <div data-v-b120a160="" class="v-alert v-theme--light bg-info v-alert--density-compact v-alert--variant-flat mb-3" role="alert">
    <!----><span class="v-alert__underlay"></span>
    <!---->
    <div class="v-alert__prepend"><i class="mdi-information mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
    <div class="v-alert__content">
      <!----> To call contracts with loaded accounts, go to the "Accounts" tab and sync them from your chain, or add them using a private key or the impersonification feature.
    </div>
    <!---->
    <!---->
  </div>
  <!--v-if-->
  <wallet-connector-mirror-stub data-v-b120a160="" prependicon="mdi-wallet" size="small" variant="outlined"></wallet-connector-mirror-stub>
</div>"
`;
